--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <meta name="author" content="Prof. Barnett">
+        <title>CSS Box Model</title>
+        <meta name="author" content="Ruocen Ma">
         <meta name="description" content="Practice learning and using styles to control the parts of the CSS box model on your pages.">
 
         <!-- Favicon -->
@@ -35,14 +35,13 @@
             </nav>
         </header>
 
-        <main id="main-content">
+   <main id="main-content">
 
             <section id="box">
                 <h2>The CSS Box Model</h2>
                 <p>Learning CSS can be difficult at first, but it helps to understand some basic things about the elements on your pages before you start to style them. Understanding which elements are going to display <code>inline</code> and which will display <code>block</code> is a great first step. After that, it's important to understand that as far as the browser is concerned, every element on your page is a box. Square or rectangle, it's a box.</p>
 
-                <p>The browser uses the <strong>CSS Box Model</strong> to render your elements on the page. It includes the content in the tag, as well as any <code>padding</code>, <code>border</code>, or <code>margin</code> added to that element. The browser and dev tools help you to view the box model for each HTML element on your page, and it looks something like the image below.</p>
-
+S
                 <div>
                     <svg width="1143" height="870" viewBox="0 0 1143 870" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="1" y="1" width="1141" height="868" fill="#CA4657" stroke="black" stroke-width="2"/>
@@ -79,8 +78,8 @@
                     <p>Below, we'll add two elements to the page. One will be an <code>inline</code> element, and one will be a <code>block</code> element. Follow along as we add them to the page, inspect them with the dev tools, then add some styles to them.</p>
                     <!-- the text used in the demos on this page was pulled from the GIT master's program web page on the TPS website: https://poly.engineering.asu.edu/git/ms-in-graphic-information-technology/ -->
                     
-                    <!-- TO DO: Add the text below to a paragraph with a class of "content", and wrap the words "Graphic Information Technology (GIT)" in a span with a class of "blue" -->
-                    The master of science in Graphic Information Technology (GIT) provides students with the opportunity to study within the various areas of graphics and cross-media design.
+                    <!-- Add the text below to a paragraph with a class of "content", and wrap the words "Graphic Information Technology (GIT)" in a span with a class of "blue" -->
+                    <p class="content">The master of science in <span class="blue">Graphic Information Technology (GIT)</span> provides students with the opportunity to study within the various areas of graphics and cross-media design.</p>
                 </section>
             </section>
 
@@ -90,10 +89,10 @@
 
                 <section>
                     <h3>Padding Box Demo</h3>
-                    <!-- TO DO: add 16 pixels of top and bottom padding to the paragraph below -->
+                    <!-- add 16 pixels of top and bottom padding to the paragraph below -->
                     <p>We are going to style the elements in this section with <strong>padding</strong>. We'll also see how padding works differently on inline and block elements.</p>
 
-                    <!-- TO DO: add the green background color and 16 pixels of padding to all sides of the link below and note the way it displays on the page. We will add more styles together to make that link look like a button -->
+                    <!-- add the green background color and 16 pixels of padding to all sides of the link below and note the way it displays on the page. We will add more styles together to make that link look like a button -->
                     <a href="#">Home</a>
                 </section>
             </section>
